# how_was_it

./: .pre-commit-config.yaml  Dockerfile  README.md  api_test.py  howwasit.db  main.py  pyproject.toml
db/: database.py  models.py
howwasit/: database.py  models.py
surfline/: api.py  surflineForecast.py  utils.py
swell/: utils.py
wind/: utils.py
