[tool.poetry]
name = "howwasit"
version = "0.1.0"
description = "Web application used to log your surf session"
authors = ["davidpigeau"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.16"
fastapi = {extras = ["all"], version = "^0.97.0"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
